add end piont to claim extractor
